--- a/src/styles/overview.scss
+++ b/src/styles/overview.scss
@@ -14,6 +14,10 @@
     width: 85vw;
     background-color: var(--theme-bg-secondary-color);
 
+    height: calc(100vh - 58px);
+    overflow-y: auto;
+    overflow-x: hidden;
+
     > * {
       border: 1px solid var(--theme-border-secondary-color);
       padding: 8px;
@@ -124,7 +128,8 @@
     box-sizing: border-box;
     height: 92vh;
     width: 100%;
-    overflow: auto;
+    height: calc(100vh - 58px);
+    overflow-y: auto;
   }
 
 }
